--- a/pc_tips/windows_backup.html
+++ b/pc_tips/windows_backup.html
@@ -44,7 +44,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Backing Up Windows 10/ 11</h1>
-            <img src="windows_backup/computer_backup.png" alt="an image representing secure data and a computer backup.">
+            <img src="windows_backup/computer_backup.webp" alt="an image representing secure data and a computer backup.">
                 <p class="imgdescription">Learn how you can back up your computer and your files.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Your computer can fail at any time, it is important that you keep a backup of both your computer and also your files so that the impact of this occurring  is minimised and you can get back up and running as quickly as possible with minimal data loss.</p>
