Add new 11 requirement download page

--- a/download_centre.html
+++ b/download_centre.html
@@ -58,6 +58,12 @@
                 <p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p> <!-- Article excerpt -->
                 <a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="Windows 11 Requirement Bypass"> <!-- Article column -->
+                <h3>Windows 11 Requirement Bypass Tool</h3> <!-- Article title -->
+                <hr>
+                <p>Download the Hackboto Tech Tips Windows 11 Requirement Bypass Tool to upgrade your "unsupported" computer to the latest version of Windows 11 from the click of a button.</p> <!-- Article excerpt -->
+                <a href="download_centre/win11_requirement_bypass_tool.html" title="Visit Windows 11 Requirement Bypass Tool download page">Download Page</a> <!-- Link to full article -->
+            </div>
             <div class="articlecolumn" title="Computer Optimiser"> <!-- Article column -->
                 <h3>Computer Optimiser Scripts</h3> <!-- Article title -->
                 <hr>
