--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -61,7 +61,7 @@
             <img src="upgrading_to_windows11/windows11ready.webp" alt="Image, This PC meets Windows 11 requirements">
                 <p><strong>If you see a message telling you that "This PC meets Windows 11 requirements" you can skip the next steps and jump straight to Downloading and Installing Windows 11.</strong></p>
                 <p>If you see anything else, this means that your PC is not officially supported but you can probably still run it anyway, read the 'What to do if my PC is unsupported?' section for more information.</p>
-            <h2 id="Unsupported-pc">What to do if my PC is unsupported?</h2> 
+            <h2 id="Unsupported-pc">What do I do if my PC is unsupported?</h2> 
                 <p>If your PC is not officially supported for Windows 11 you will be able to run Windows 11 on your computer system if you meet the following core requirements:</p>
                 <ul>
                     <li>Your PC supports POPCNT.</li>
@@ -73,13 +73,9 @@
                 <a class="linkbutton" href="check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a>
                 <p>If you find that your PC does not have WDDM 2.0 display drivers or later, or does not support POPCNT, you will need to replace your PC before October 2025 to stay secure or consider switching to an alternative OS such as Ubuntu, Linux Mint, ChromeOS Flex, etc.</p>
                 <p>If your PC is unsupported by Windows 11 but is meets the core requirements that I have outlined, you can still upgrade to Windows 11, but you will need to bypass the system requirements.</p>
-                <p>You can bypass the Windows 11 system requirements using the "bypass_windows11_requirements.cmd" tool, this tool will trick the Windows 11 installer into thinking that your computer is supported, once you have run the tool you can upgrade to Windows 11 in the same way as any "supported" PC.</p>
-                <p>You can download the "bypass_windows11_requirements.cmd" tool using the link below.</p>
-                <a class="linkbutton" title="Download bypass_windows11_requirements.cmd" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/bypass_windows11_requirements.cmd">Download bypass_windows11_requirements.cmd</a>
-            <br>
-            <img src="upgrading_to_windows11/bypass_installed.webp" alt="Skip TPM Check on Dynamic Update V10 INSTALLED run again to remove.">
-            <p>The bypass_windows11_requirements.cmd tool is really easy to use, you just need to run it, and it will automatically install 'Skip TPM Check on Dynamic Update V10' to your computer. If you see a screen like the one above, the bypass has been successfully installed onto your computer and you can proceed to the Downloading and Installing Windows 11 section.</p>
-            <p>If you see a different message to the one that is demonstrated above, you will need to run the "bypass_windows11_requirements.cmd" again as the program works as an installer and uninstaller in one, this means that you run the program once and it will install the bypass, you run it a 2nd time and it will remove the patch, the 3rd time reinstalls the patch, etc.</p>
+                <p>You can bypass the Windows 11 system requirements using the Windows 11 Requirement Bypass tool, this tool will trick the Windows 11 installer into thinking that your computer is supported, once you have run the tool you can upgrade to Windows 11 in the same way as any "supported" PC.</p>
+                <p>You can find the instructions and download link on the Windows 11 Requirement Bypass Tool download page linked below.</p>
+                <a class="linkbutton" title="Visit Windows 11 Requirement Bypass Tool download page" href="https://hackbototechtips.github.io/download_centre/win11_requirement_bypass_tool.html">Windows 11 Requirement Bypass Tool</a>
         <h2 id="downloading-installing-windows-11">Downloading and Installing Windows 11</h2>
             <p>Windows 11 is available as an upgrade from Windows 10, this means that all of your files and applications should carry over when you upgrade, the upgrade is free for both supported and unsupported PCs.</p>
             <p>You can download the official version of Windows 11 from the official Microsoft website via the link below.</p>
@@ -119,7 +115,7 @@
             <p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
             <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
             <hr>
-        <p>Page Updated: 16/09/2024</p>
+        <p>Page Updated: 22/09/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
