--- a/map.html
+++ b/map.html
@@ -60,6 +60,7 @@
                     <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
                     <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
                     <li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
+                    <li><h3><a href="download_centre/win11_requirement_bypass_tool.html" title="Go to Windows 11 Requirement Bypass Tool download page">Windows 11 Requirement Bypass Tool</a></h3></li>
                     <li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser</a></h3></li>
                 </ul>
             <h2 class="l2"><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
