--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -86,7 +86,7 @@
             <img src="upgrading_to_windows11/set_product_language.webp" alt="Set the product language">
                 <p>Next you need to select the product language, this must be the same as your current Windows 10 install. Follow the instructions provided for finding your product language, then select the appropriate product language, then click "Confirm."</p>
             <img src="upgrading_to_windows11/64bitdownload.webp" alt="Download Windows 11. 64-Bit Download.">
-                <p>Now you can download the Windows 11 ISO, this will take a while depending on your internet bandwidth as the file is roughly between 3-7GB in size. On an average you should expect it to take around 10-25 minutes to download.</p>
+                <p>Now you can download the Windows 11 ISO, this will take a while depending on your internet bandwidth as the file is roughly between 3-7GB in size. On average you should expect it to take around 10-25 minutes to download.</p>
             <img src="upgrading_to_windows11/iso_setup.webp" alt="Click on setup.exe">
                 <p>When the ISO file has downloaded, you need to open it, this will open a virtual DVD, from within the virtual DVD you need to double click on the "setup.exe" file.</p>
             <img src="upgrading_to_windows11/windows_11_setup.webp" alt="Install Windows 11 screen, says supported PC on Install Windows 11 and Unsupported PC on Install Windows Server">
